cargo-features = ["edition2024"]

[package]
name = "fxmac_rs"
authors = ["xiaoluoyuan@163.com"]
version = "0.2.0"
edition = "2024"
license = "GPL-2.0"
description = "fxmac ethernet driver in Rust on PhytiumPi board."
homepage = "https://github.com/elliott10/fxmac_rs.git"
documentation = "https://github.com/elliott10/fxmac_rs/blob/main/README.md"
repository = "https://github.com/elliott10/fxmac_rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
debug = []

[dependencies]
log = "0.4"
crate_interface = "0.3"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "11"
